--- a/input/includes/fragment-pagebegin.html
+++ b/input/includes/fragment-pagebegin.html
@@ -46,7 +46,7 @@
         <!-- at-fhir-ig-template begin -->
         <div class="row">
           <div class="col-1">
-            <img id="header-logo" width="200px" src="{{site.data.infos.assets}}AIT_Logo_ohne_claim_RGB__002_.png" />
+            <img id="header-logo" src="{{site.data.infos.assets}}AIT_Bildmarke.png" />
           </div>
           <div class="col-11">
         <!-- at-fhir-ig-template end -->
